# discord-bot

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: config.hpp
include/bot/: cfx_status.hpp  command.hpp  command_router.hpp  news.hpp  presence.hpp  sticky.hpp  strings.hpp  trollmic.hpp  voice_trigger.hpp
src/: main.cpp
src/bot/: cfx_status.cpp  command_router.cpp  news.cpp
src/commands/: ban.cpp  info.cpp  kick.cpp  ping.cpp  removenews.cpp  setupcfxstatus.cpp  setupnews.cpp  sticky.cpp  stoptroll.cpp  trollmic.cpp  unsticky.cpp
